# Algo-TeamProject

./: .gitignore  CMakeLists.txt  TeamProject.sln  vcpkg.json
DataCollector/: CMakeLists.txt  CMakeSettings.json  YouTubeApiClient.h  main.cpp  vcpkg.json
DataCollector/data/: youtube_all.csv
TeamProject/: AVLTree.cpp  AVLTree.h  AVLTree.hpp  BasicSelect.cpp  BasicSelect.h  BasicSelect.hpp  BasicSort.cpp  BasicSort.h  BasicSort.hpp  BenchmarkHistory.h  CMakeLists.txt  Headers.h  Heap.cpp  Heap.h  Heap.hpp  MultiMetric.h  OnlineInsert.cpp  RankEngine.cpp  RankEngine.h  RankingInterface.h  RankingSort.cpp  RankingSort.h  Score.cpp  Score.h  SortingAlgorithm.cpp  TeamProject.vcxproj  TeamProject.vcxproj.filters  Utility.cpp  Utility.h  Video.cpp  Video.h  main.cpp  vcpkg.json
TeamProject/Adapter/: DummyDataProvider.h  IDataProvider.h  YouTubeAdapter.h
TeamProject/Api/: YouTubeApiTypes.h
TeamProject/Domain/: VideoMetrics.h
TeamProject/Engine/: RankingEngine.h
TeamProject/Scoring/: ScoreCalculator.h
TeamProject/Sorting/: SortingStrategy.hpp
TeamProject/UI/: ConsoleUI.h  MenuUI.h  RankingUI.h  UITemplates.h  YouTubeRankUI.h
data/: .gitkeep  youtube_all.csv  youtube_latest.csv
docs/: DIAGRAM.md
